# datatalks_llm

./: .gitignore  pyproject.toml
01-intro/: homework.ipynb  rag-intro.ipynb  rag-with-es.ipynb  rag-with-minisearch.ipynb  rag-with-minsearch.ipynb  rag_with_minisearch.py  rag_with_minsearch_examples.py
02-vectorsearch/: homework.ipynb  hybrid_search.ipynb  rag_with_minisearch_vs_qdrant.ipynb  sematic_search.ipynb
src/: rag_with_minsearch.py
