[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch==8.13.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "notebook==7.1.2",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "qdrant-client[fastembed]>=1.14.3",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
